--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,7 +67,7 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
-    implementation "androidx.navigation:navigation-compose:2.4.0-beta01"
+    implementation "androidx.navigation:navigation-compose:2.4.0-rc01"
 
     implementation "com.google.firebase:firebase-auth:19.2.0"
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
@@ -77,7 +77,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
     implementation "com.google.dagger:hilt-android:2.38.1"
-    implementation "androidx.hilt:hilt-navigation-compose:1.0.0-beta01"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0-rc01"
     kapt "com.google.dagger:hilt-android-compiler:2.38.1"
 
     implementation "io.coil-kt:coil-compose:1.3.2"
